# rust-playground

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  README.org
.config/nix/: pkgs.nix  shell.nix
beer-song/: Cargo.toml
beer-song/src/: lib.rs
bob/: Cargo.toml
bob/src/: lib.rs
book/: Cargo.toml
book/examples/: ch02-guessing-game.rs  ch03-break-with-value.rs  ch03-for-loop.rs  ch03-functions.rs  ch03-integer-overflow.rs  ch03-loop-labels.rs  ch03-variables.rs  ch03-while-loop.rs  ch19-newtype.rs
by-example/: Cargo.toml  README.md
by-example/examples/: any.rs  hello-print.rs  iterators.rs  print-debug.rs  print-display-2.rs  print-display.rs
by-example/script/: cargo-watch-example
by-example/src/: main.rs
c2rust/: Cargo.toml
c2rust/examples/: iteration-sort.rs
crash/: Cargo.toml
crash/bouncy4/: Cargo.toml
crash/clicky/: Cargo.toml
crash/course/: Cargo.toml
crash/examples/: 00-intro_magic0.rs  00-intro_magic1.rs  00-intro_mut1.rs  01-kick-catch-unwind.rs  01-kick-display.rs  01-kick-fizzbuzz-1.rs  01-kick-fizzbuzz.rs  01-kick-loop.rs  01-kick-numbers.rs  02-ownership-bouncy.rs  02-ownership-drop.rs  02-ownership-ex4.rs  02-ownership-lexical.rs  02-ownership-mut-ref-v-var.rs  02-ownership-mut.rs  03-cli-2.rs  03-cli-parse-nested.rs  03-cli-parse.rs  03-cli.rs  03-impl-trait.rs  intersperse.rs  intro_string.rs  mut2.rs  vec-string-to-str.rs
enum-eg/: Cargo.toml  main.rs
gigasecond/: Cargo.toml
hello-world/: Cargo.toml
intro/: .envrc  .gitignore  Cargo.toml  Makefile  hello.rs
intro/.config/nix/: pkgs.nix  shell.nix
intro/c-src/: intro-c.c
intro/cpp-src/: intro-cpp.cpp
intro/scripts/: cargo-watch
intro/src/: basics.rs  main.c  main.rs
intro/tests/: find.rs
leap/: Cargo.toml
misc/: .envrc  .gitignore  Cargo.toml  mut_slices.rs
misc/benches/: point_to_string.rs
misc/examples/: clap.rs  format-panicking.rs  format.rs  from-windows-1255.rs  hashmap.rs  iter.rs  mut_slices.rs  nll.rs  ownership.rs  panic2.rs  pass-by-value-or-ref.rs  tcp.rs  trait-callback.rs  trait-callbacks-02.rs  trait-callbacks-boxed.rs  trait-callbacks.rs  trait.rs  traits-fn-method.rs  traits.rs  traits2.rs
misc/script/: hello
misc/scripts/: build  hello  r
multiple-lifetimes/: Cargo.toml
opcode/: README.md  opcode.hs  opcode.kts  opcode.rs
raindrops/: Cargo.toml
script/: build-all  cargo-run-examples  cargo-watch  cargo-watch-benches  cargo-watch-examples
scripts/: cargo-watch  cargo-watch-examples  cargo-watch-run  run-example
(+133 files in other folders)
