[workspace]

resolver = "2"

members = [
    "./beer-song",
    "./bob",
    "./book",
    "./by-example",
    "./c2rust",
    "./crash/bouncy4",
    "./crash/clicky", # requires gtk3
    "./crash/course",
    "./exercism/rust/proverb",
    "./exercism/rust/armstrong-numbers",
    "./enum-eg",
    "./gigasecond",
    "./hello-world",
    #"./intro",
    "./leap",
    "./misc",
    "./multiple-lifetimes",
    "./raindrops",
]
