[workspace]

resolver = "2"

members = [
    "./beer-song",
    "./bob",
    "./book",
    "./by-example",
    "./c2rust",
    "./crash/bouncy4",
    "./crash/clicky", # requires gtk3
    "./crash/course",
    "./enum-eg",
    "./exercism/rust/armstrong-numbers",
    "./exercism/rust/difference-of-squares",
    "./exercism/rust/grains",
    "./exercism/rust/proverb",
    "./gigasecond",
    "./hello-world",
    #"./intro",
    "./leap",
    "./misc",
    "./multiple-lifetimes",
    "./raindrops",
]
