[workspace]

resolver = "2"

members = [
    "./beer-song",
    "./bob",
    "./book",
    "./by-example",
    "./c2rust",
    "./crash/bouncy4",
    "./crash/clicky", # requires gtk3
    "./crash/course",
    "./enum-eg",
    "./exercism/rust/armstrong-numbers",
    "./exercism/rust/difference-of-squares",
    "./exercism/rust/grains",
    "./exercism/rust/high-scores",
    "./exercism/rust/kindergarten-garden",
    "./exercism/rust/matching-brackets",
    "./exercism/rust/nth-prime",
    "./exercism/rust/prime-factors",
    "./exercism/rust/proverb",
    "./exercism/rust/series",
    "./exercism/rust/sum-of-multiples",
    "./gigasecond",
    "./hello-world",
    #"./intro",
    "./leap",
    "./misc",
    "./multiple-lifetimes",
    "./raindrops",
]
