[package]
name = "intro"
version = "0.1.0"
authors = ["Steven Shaw <steven@steshaw.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-std = { version = "1.2.0", features = ["attributes"] }
num-format = "0.4.0"
