[package]
name = "misc"
version = "0.1.0"
authors = ["Steven Shaw <steven@steshaw.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-panic = "0.1.12"
anyhow = "1.0.87"
encoding_rs = "0.8.34"
clap = { version = "4.2", features = ["derive"] }
